crates/cadenza-compiler/test-data/semantics/measures-type-error-on-incompatible-addition.expected
error: incompatible unit dimensions
 --> test.cdz:3:1
  |
3 | 100meter + 10foot
  | ^^^^^^^^^^^^^^^^^ cannot add `meter` and `foot`
  |
  = note: left side has dimension: meter
  = note: right side has dimension: foot
  = help: addition requires compatible dimensions