crates/cadenza-compiler/test-data/semantics/measures-type-error-on-incompatible-addition.cdz
measure meter
measure foot
100meter + 10foot